--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "capacitor-navigationbarnx",
-  "version": "0.1.2",
+  "version": "0.1.5",
   "description": "Provides methods to customize the navigation bar on crossplatform apps built with capacitor",
   "main": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
@@ -24,7 +24,7 @@
     "dist/",
     "ios/",
     "android/",
-    "CapacitorNavigationbar.podspec"
+    "CapacitorNavigationbarnx.podspec"
   ],
   "keywords": [
     "capacitor",
